# im_enhance

./: CMakeLists.txt  README.md  main.cpp  package.xml  testmat.cpp
cmake/: FindSuiteSparse.cmake
include/: MUMPSSupport  im_enhance.h  npy.hpp
include/impl/: MUMPSSupport.h
python/: CMakeLists.txt  _conversion.h  binding.cpp  binding2.cpp  bindings.cpp  conversion.cpp  cv_conversion.cpp  cv_conversion.h  setup.py
src/: bagprocess.py  cusparse_wrapper.h  dhe.cpp  expfusion.cpp  im_enhance.cpp  ime_ros.cpp  matutils.h  retinex.cpp  timer.h  ying.py
